
[project]
name = "maxgradient"
version = "0.2.17"
description = "MaxGradient automates the printing gradient colored text to the console."
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }]
dependencies = [
    "lorem-text>=2.1",
    "loguru>=0.7.2",
    "numpy>=1.25.2",
    "pendulum>=2.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "rich>=13.5.3",
    "typer>=0.9.0",
]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.4.7",
    "mkdocstrings[python]>=0.18"
]
cli = [
    "typer[all]>=0.9.0"
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
gradient = "src.maxgradient.cli:app" 
mypy='mypy -p src.maxgradient --ignore-missing-imports'


[tool.setuptools]
# ...
package-dir = {"" = "src"}
namespace-packages = ["maxgradient"]
packages = [
    "maxgradient",
    "maxgradient.cli",
    "maxgradient.gradient",
    "maxgradient.console",
    "maxgradient.rule",
    "maxgradient.rule"
]

# [tool.mypy.overides.'maxgradient']
# ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"



